--- a/FirstAspNetTelegramBot/FirstAspNetTelegramBot.csproj
+++ b/FirstAspNetTelegramBot/FirstAspNetTelegramBot.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.36" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.1" />
     <PackageReference Include="Telegram.Bot" Version="22.1.0" />
     <PackageReference Include="Telegram.Bots.Extensions.AspNetCore" Version="5.9.0" />
   </ItemGroup>
